fin de jeu a faire

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,10 +12,13 @@
   
 </head>
 <body onload="init()">
-	<div class="nav">
+	<nav>
+		<div class="nav">
 		<h1> Morpion batman vs superman </h1>
 	</div>
+</nav>
 
+<main>
 	<div class="conteneur">
 		<div id="jeu" class="element">
 			<canvas  id="canva" width="600px" height="600px">
@@ -36,7 +39,7 @@
 			<h3  id="gagne" style="color:red">Bien joué batman </h3>
 		</div>
 	</div>
-
+</main>
 
 
 
